# janus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  README_CRON.md  build.sh  changelog.md  cliff.toml  deploy_from_local.sh  deploy_on_server.sh  docker-compose.yml  keep_senders.txt  logrotate.conf  pull_db.sh  push_db.sh  pyproject.toml  server-setup.sh  setup.sh  setup_cron.sh  setup_logrotate.sh  test_excluded_senders.py  test_keep_senders.py
.github/workflows/: docker.yml  pages.yml  release.yml
docs/: 00-init-plan.md  index.html
src/: auth.py  config.py  feedback.py  gmail_client.py  llm_factory.py  llm_processor.py  main.py  notifier.py  preview.py  report.py  report_mailing_list.py  test_llm.py
src/templates/: mailing_list_report.jinja  processed_report.jinja  urgent_report.jinja
