[project]
name = "janus"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Tranquillini",email = "stefano@chino.io"}
]
package-mode = false
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "google-api-python-client (>=2.190.0,<3.0.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "langchain-google-genai (>=4.2.1,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-core (>=1.2.16,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
# we're not using poetry for packaging
package-mode = false