[project]
name = "janus"
version = "0.1.0"
description = "Gmail Intelligent Assistant"
authors = [
    {name = "Stefano Tranquillini", email = "stefano@chino.io"}
]
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.190.0",
    "google-auth-oauthlib>=1.3.0",
    "google-auth-httplib2>=0.3.0",
    "langchain-google-genai>=4.2.1",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "langchain-community>=0.4.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "jinja2>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
